--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald|Permanent+Marker&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ea8d5aae40.js" crossorigin="anonymous"></script>
+    <title>Phone Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
